--- a/_posts/상단 하단 광고r2.md
+++ b/_posts/상단 하단 광고r2.md
@@ -28,20 +28,19 @@ layout: default
     {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">{% endif %}
 
     <div class="page__inner-wrap">
+      <!-- 제목 위에 고정된 광고 -->
+      <div class="ad-container" style="text-align: center; padding-bottom: 20px;">
+          <ins class="adsbygoogle"
+               style="display:inline-block;width:728px;height:90px"
+               data-ad-client="ca-pub-9374368296307755"
+               data-ad-slot="3603389079"></ins>
+          <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+      </div>
+
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
-          <!-- 제목 상단에 광고 삽입 (크기 축소) -->
-          <div class="in-content-ad">
-              <ins class="adsbygoogle"
-                   style="display:block; margin: auto; width: 80%; text-align: center; padding: 10px 0;"
-                   data-ad-client="ca-pub-9374368296307755"
-                   data-ad-slot="9952845435"
-                   data-ad-format="auto"
-                   data-full-width-responsive="true"></ins>
-              <script>
-                  (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
-          </div>
           {% if page.title -%}
           <h1 id="page-title" class="page__title" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
@@ -61,7 +60,7 @@ layout: default
           </aside>
         {% endif %}
         {{ content }}
-        
+
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
@@ -92,8 +91,93 @@ layout: default
 
 
 
+
 <html lang="en">
-<head>
+<>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>광고 팝업 예제</title>
+    <style>
+        /* 전체 화면을 덮는 오버레이 */
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+
+        /* 팝업 스타일 */
+        #popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%; /* 화면 너비의 80% */
+            max-width: 400px; /* 최대 너비 */
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            z-index: 1000;
+            text-align: center;
+        }
+
+        #adContainer {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            z-index: 1001;
+            overflow: auto;
+            text-align: center;
+            padding-top: 50px;
+        }
+
+        .ad-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            background-color: #f1f1f1;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .ad-header span {
+            font-size: 14px;
+        }
+
+        .close-btn {
+            cursor: pointer;
+            font-size: 18px;
+            font-weight: bold;
+            background: none;
+            border: none;
+        }
+
+        #closeAdButton {
+            display: none;
+            margin-top: 20px;
+            padding: 10px 20px;
+            border: none;
+            background-color: #007BFF;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #closeAdButton:hover {
+            background-color: #0056b3;
+        }
+    </style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상단 및 하단 고정 광고 예제</title>
@@ -101,19 +185,19 @@ layout: default
     <!-- Google AdSense 스크립트 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
             crossorigin="anonymous"></script>
-
+    
     <style>
+        /* 본문 상단에 고정된 광고 */
         .anchor-ad-top {
             position: fixed;
             top: 0;
-            left: 50%;
-            transform: translateX(-50%) scale(0.5); /* 중앙 정렬 및 50% 크기로 축소 */
-            transform-origin: top center;
-            width: 728px;
-            height: 90px;
+            left: 0;
+            width: 100%;
+            height: 90px; /* 광고 높이 */
             background-color: #fff;
-            z-index: 1002;
-            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+            z-index: 10000; /* 다른 요소 위에 표시 */
+            text-align: center; /* 광고를 중앙에 위치 */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
         }
 
         .anchor-ad-bottom {
@@ -129,146 +213,145 @@ layout: default
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
         }
 
-        /* 광고 크기에 맞춘 상단 및 하단 여백 */
+        /* 모바일에서도 고정된 광고 하단 공간을 확보 */
         body {
-            padding-top: 45px; /* 상단 고정 광고에 맞춘 여백 */
-            padding-bottom: 45px; /* 하단 고정 광고에 맞춘 여백 */
-        }
+          padding-top: 90px; /* 광고 높이만큼 본문 상단 여백 추가 */
+          margin: 0;
+      }
     </style>
+      
 </head>
-
 <body>
-<!-- 상단 고정 광고 -->
-<div class="anchor-ad-top">
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-pub-9374368296307755"
-         data-ad-slot="3603389079"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-</div>
 
-<!-- 하단 고정 광고 -->
-<div class="anchor-ad-bottom">
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-pub-9374368296307755"
-         data-ad-slot="4202989029"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+<!-- 상단 고정 광고 -->
+<div class="anchor-ad-top" style="text-align: center; padding-top: 10px;">
+  <ins class="adsbygoogle"
+       style="display:inline-block;width:728px;height:90px"
+       data-ad-client="ca-pub-9374368296307755"
+       data-ad-slot="3603389079"></ins>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </div>
 
 <!-- 본문 콘텐츠 -->
 <div id="main" role="main">
-    <h1>메인 콘텐츠 시작</h1>
-    <p>여기에 메인 콘텐츠가 표시됩니다.</p>
+  <h1>메인 콘텐츠 시작</h1>
+  <p>여기에 메인 콘텐츠가 표시됩니다.</p>
 </div>
 
-
+<!-- 하단 고정 광고 -->
+<div class="anchor-ad-bottom">
+  <ins class="adsbygoogle"
+  style="display:inline-block;width:728px;height:90px"
+  data-ad-client="ca-pub-9374368296307755"
+  data-ad-slot="4202989029"></ins>
+<script>
+ (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 
 <div id="overlay" onclick="closePopup()"></div>
 
 <div id="popup">
-    <h2>kkdamoa에 오신 것을 환영합니다</h2>
-    <p>더 많은 콘텐츠를 보려면 아래 버튼을 클릭해 광고를 시청하세요.</p>
-    <button onclick="showAd()">광고 보기</button>
+<h2>kkdamoa에 오신 것을 환영합니다</h2>
+<p>더 많은 콘텐츠를 보려면 아래 버튼을 클릭해 광고를 시청하세요.</p>
+<button onclick="showAd()">광고 보기</button>
 </div>
 
 <div id="adContainer">
-    <div class="ad-header">
-        <span id="adCounter">광고가 5초 후에 닫힐 수 있습니다...</span>
-        <button class="close-btn" onclick="closeAd()">&times;</button>
-    </div>
-    <h2>광고</h2>
-    <ins class="adsbygoogle"
-         style="display:block; margin: auto;"
-         data-ad-client="ca-pub-9374368296307755"
-         data-ad-slot="9952845435"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
+<div class="ad-header">
+   <span id="adCounter">광고가 5초 후에 닫힐 수 있습니다...</span>
+   <button class="close-btn" onclick="closeAd()">&times;</button>
+</div>
+<h2>광고</h2>
+<ins class="adsbygoogle"
+    style="display:block; margin: auto;"
+    data-ad-client="ca-pub-9374368296307755"
+    data-ad-slot="9952845435"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
 </div>
 
 <script>
-  window.onload = function() {
-      if (!shouldShowPopup()) return;
-      showPopup();
-  };
+window.onload = function() {
+ if (!shouldShowPopup()) return;
+ showPopup();
+};
 
-  function showPopup() {
-      document.getElementById('overlay').style.display = 'block';
-      document.getElementById('popup').style.display = 'block';
-      document.body.style.overflow = 'hidden'; // 스크롤 비활성화
-  }
+function showPopup() {
+ document.getElementById('overlay').style.display = 'block';
+ document.getElementById('popup').style.display = 'block';
+ document.body.style.overflow = 'hidden'; // 스크롤 비활성화
+}
 
-  function closePopup() {
-      document.getElementById('overlay').style.display = 'none';
-      document.getElementById('popup').style.display = 'none';
-      document.body.style.overflow = ''; // 스크롤 활성화
-  }
+function closePopup() {
+ document.getElementById('overlay').style.display = 'none';
+ document.getElementById('popup').style.display = 'none';
+ document.body.style.overflow = ''; // 스크롤 활성화
+}
 
-  function showAd() {
-      closePopup(); // 팝업을 닫음
-      document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
-      document.body.style.overflow = 'hidden'; // 스크롤 비활성화
+function showAd() {
+ closePopup(); // 팝업을 닫음
+ document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
+ document.body.style.overflow = 'hidden'; // 스크롤 비활성화
 
-      // 광고 송출 코드 실행
-      (adsbygoogle = window.adsbygoogle || []).push({});
+ // 광고 송출 코드 실행
+ (adsbygoogle = window.adsbygoogle || []).push({});
 
-      // 5초 카운터 후 닫기 버튼 활성화
-      let counter = 5;
-      let adCounter = document.getElementById('adCounter');
-      let closeButton = document.querySelector('.close-btn');
-      closeButton.style.display = 'none'; // 초기에는 닫기 버튼 숨김
+ // 5초 카운터 후 닫기 버튼 활성화
+ let counter = 5;
+ let adCounter = document.getElementById('adCounter');
+ let closeButton = document.querySelector('.close-btn');
+ closeButton.style.display = 'none'; // 초기에는 닫기 버튼 숨김
 
-      let countdown = setInterval(function() {
-          counter--;
-          adCounter.textContent = `광고가 ${counter}초 후에 닫힐 수 있습니다...`;
-          if (counter <= 0) {
-              clearInterval(countdown);
-              adCounter.textContent = "광고를 닫을 수 있습니다.";
-              closeButton.style.display = 'inline'; // 닫기 버튼 표시
-          }
-      }, 1000);
-  }
+ let countdown = setInterval(function() {
+     counter--;
+     adCounter.textContent = `광고가 ${counter}초 후에 닫힐 수 있습니다...`;
+     if (counter <= 0) {
+         clearInterval(countdown);
+         adCounter.textContent = "광고를 닫을 수 있습니다.";
+         closeButton.style.display = 'inline'; // 닫기 버튼 표시
+     }
+ }, 1000);
+}
 
-  function closeAd() {
-      document.getElementById('adContainer').style.display = 'none'; // 광고 컨테이너 숨김
-      document.body.style.overflow = ''; // 스크롤 활성화
-      alert('광고 시청이 완료되었습니다.');
+function closeAd() {
+ document.getElementById('adContainer').style.display = 'none'; // 광고 컨테이너 숨김
+ document.body.style.overflow = ''; // 스크롤 활성화
+ alert('광고 시청이 완료되었습니다.');
 
-      // 클릭 횟수 증가
-      incrementClickCount();
-  }
+ // 클릭 횟수 증가
+ incrementClickCount();
+}
 
-  function incrementClickCount() {
-      let currentDate = new Date().toISOString().split('T')[0]; // 현재 날짜 (YYYY-MM-DD)
-      let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
+function incrementClickCount() {
+ let currentDate = new Date().toISOString().split('T')[0]; // 현재 날짜 (YYYY-MM-DD)
+ let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
 
-      // 날짜가 변경되면 클릭 수를 초기화
-      if (clickData.date !== currentDate) {
-          clickData = { date: currentDate, count: 0 };
-      }
+ // 날짜가 변경되면 클릭 수를 초기화
+ if (clickData.date !== currentDate) {
+     clickData = { date: currentDate, count: 0 };
+ }
 
-      // 클릭 횟수 증가 및 저장
-      clickData.count++;
-      localStorage.setItem('clickData', JSON.stringify(clickData));
-  }
+ // 클릭 횟수 증가 및 저장
+ clickData.count++;
+ localStorage.setItem('clickData', JSON.stringify(clickData));
+}
 
-  function shouldShowPopup() {
-      let currentDate = new Date().toISOString().split('T')[0];
-      let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
+function shouldShowPopup() {
+ let currentDate = new Date().toISOString().split('T')[0];
+ let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
 
-      // 클릭 횟수가 2번 이상이면 팝업 표시하지 않음
-      return clickData.count < 2;
-  }
+ // 클릭 횟수가 2번 이상이면 팝업 표시하지 않음
+ return clickData.count < 2;
+}
 </script>
 
 
 <!-- 광고 스크립트 -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
-     crossorigin="anonymous"></script>
+crossorigin="anonymous"></script>
 
 </body>
 </html>
