--- a/_posts/최종r1 11.07.md
+++ b/_posts/최종r1 11.07.md
@@ -266,17 +266,16 @@ layout: default
 </div>
 <div id="adContainer">
     <div class="ad-header">
-       <button class="close-btn" onclick="closeAd()">&times;</button>
+        <h2 style="display: inline-block; margin-right: 10px;">광고</h2>
+        <span id="adCounter" style="display: inline-block; font-size: 14px;">광고가 7초 후에 닫힐 수 있습니다...</span>
+        <button class="close-btn" onclick="closeAd()" style="display: none; margin-left: auto;">&times;</button>
     </div>
-    <h2>광고</h2>
     <ins class="adsbygoogle"
          style="display:block; margin: auto;"
          data-ad-client="ca-pub-9374368296307755"
          data-ad-slot="9952845435"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
-    <!-- 광고 하단에 카운터 표시 -->
-    <div id="adCounter" style="text-align: center; margin-top: 10px;">광고가 7초 후에 닫힐 수 있습니다...</div>
 </div>
 
 <script>
@@ -315,10 +314,12 @@ function showAd() {
         if (counter <= 0) {
             clearInterval(countdown);
             adCounter.textContent = "광고를 닫을 수 있습니다.";
-            closeButton.style.display = 'inline';
+            closeButton.style.display = 'inline'; // 닫기 버튼 표시
         }
     }, 1000);
 }
+</script>
+
 
 
 function closeAd() {
