--- a/_posts/2024-11-08-충청남도 10월 아이랑 놀기 좋은 여행지 10선.md
+++ b/_posts/2024-11-08-충청남도 10월 아이랑 놀기 좋은 여행지 10선.md
@@ -42,4 +42,4 @@ layout: single
 ---
 
 충청남도는 아이와 함께할 수 있는 다양한 즐길 거리가 풍부합니다. 10월의 시원한 날씨 속에서 가족과 함께 특별한 추억을 만들어보세요. 위의 추천 여행지는 아이들이 좋아할 만한 다양한 체험과 즐길 거리를 제공하는 명소들로, 소중한 시간을 선사할 것입니다.
-{% raw %}
+{% endraw %}
